--- a/www/views/menu.html
+++ b/www/views/menu.html
@@ -14,7 +14,7 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-          <ion-item class="menu-item"href="#/help"><i class="icon1 ion-star" ng-class="cat.icon"></i> Timeline</ion-item>
+          <ion-item class="menu-item"href='#/app/'+{{id}}><i class="icon1 ion-star" ng-class="cat.icon"></i> Timeline</ion-item>
           <ion-item class="menu-item" href="#/albums"><i class="icon1 ion-camera" ng-class="cat.icon"> </i> Photos</ion-item>
           <ion-item class="menu-item" href="#/events"><i class="icon1 ion-calendar" ng-class="cat.icon"></i> Events</ion-item>
           <ion-item class="menu-item" href="#/videos"><i class="icon1 ion-videocamera" ng-class="cat.icon"> </i> Videos</ion-item>
