--- a/www/views/load-brand.html
+++ b/www/views/load-brand.html
@@ -1,7 +1,45 @@
+<link href="css/style.css" rel="stylesheet">
 <ion-view>
 <div class="container">
   <div class="col col-10 window">
-  <iframe width="350" height="528" scrolling="yes" style="margin:10px;" ng-src="{{link}}"></iframe>
+    <iframe class="frame" width="312" height="528" scrolling="yes" style="margin:10px;" ng-src="{{link}}"></iframe>
+  </div>
+  <div class="demo-text">
+    <h1> Your App Prototype </h1>
+    <ul class="functions">
+      <li class="item item-checkbox">
+         <label class="checkbox">
+           <input type="checkbox">
+         </label>
+         <p class="function-text"><strong class="highlight">Communicating</strong> your brand, products and updates in a clean manner</p>
+      </li>
+      <li class="item item-checkbox">
+         <label class="checkbox">
+           <input type="checkbox">
+         </label>
+         <p class="function-text"><strong class="highlight">Engaging</strong> users directly through push notifications</p>
+      </li>
+      <li class="item item-checkbox">
+         <label class="checkbox">
+           <input type="checkbox">
+         </label>
+         <p class="function-text"><strong class="highlight">Integrating</strong> your Facebook existing updates with your app</p>
+      </li>
+      <li class="item item-checkbox">
+         <label class="checkbox">
+           <input type="checkbox">
+         </label>
+         <p class="function-text"><strong class="highlight">Tracking</strong> how engaged your users are through analytics</p>
+      </li>
+    </ul>
+  </br>
+</br>
+    <div class="card">
+  <div class="item item-text-wrap function-card">
+    <p>Find out more information at <span class="highlight">www.startyourapp.com</span> </p>
+    <p>or Contact us at <span class="highlight">contact@startyourapp.com</span></p>
+  </div>
+</div>
   </div>
 </div>
 </ion-view>
