--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,21 +5,27 @@ body{
   text-align: center;
   padding:0;
 
+
 }
 a:-webkit-any-link{
 text-decoration:none !important;
 }
 
-.container{
-  text-align: center;
-  background-color:#AEC4CC;
-}
+
 .close{
   width:100%;
 }
+.demo-text{
+  float:right;
+  padding:50px 100px;
 
-iframe{
+}
+.frame{
+  border: 1px solid black;
+}
+.window{
   padding-left: 25px;
+  float:left;
 }
 .text{
   height:100%;
@@ -33,7 +39,7 @@ iframe{
   width:100%;
 }
 .icon1{
-  color:#43cee6;
+  color:#4a87ee;
   font-size: 20px;
   padding-right: 10px;
 }
@@ -51,7 +57,7 @@ iframe{
   padding: 0;
   text-decoration: none;
   height:120px;
-  border-bottom:1px solid #43cee6;
+  border-bottom:1px solid #4a87ee;
 }
 .menu-item{
   text-align: left;
@@ -129,7 +135,7 @@ display:block;
 
 .src{
   width:100%;
-  background-color: #43cee6;
+  background-color: #4a87ee;
 
 }
 .color1{
@@ -146,4 +152,30 @@ display:block;
 .brandslist{
   text-align: left;
   padding-left:20px;
+}
+.item-checkbox{
+  border:0;
+  font-size: 10px;
+
+}
+.function-text{
+  text-align: left;
+  font-weight: 300;
+  padding: 3px 5px;
+}
+.container p{
+  color:grey !important;
+}
+
+.highlight{
+  color:#4a87ee;
+}
+.container h1{
+    color:#30302E;
+}
+.checkbox{
+  font-size: 10px;
+}
+.function-card{
+  font-size: 12px;
 }
