--- a/www/views/menu.html
+++ b/www/views/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content class="menu-content">
-    <ion-nav-bar class="bar-calm">
+    <ion-nav-bar class="bar-positive">
       <ion-nav-buttons side="left" >
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
@@ -10,7 +10,7 @@
   </ion-side-menu-content>
   <ion-side-menu side="left">
     <ion-header-bar class="bar-light">
-      <h1 class="title">Red Bull</h1>
+      <h1 class="title">Your App</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
