--- a/www/views/load-brand.html
+++ b/www/views/load-brand.html
@@ -5,7 +5,8 @@
     <iframe class="frame" width="312" height="528" scrolling="yes" style="margin:10px;" ng-src="{{link}}"></iframe>
   </div>
   <div class="demo-text">
-    <h1> Your App Prototype </h1>
+    <h1> Your App Demo </h1>
+    <h4> An app can improve the way you engage your users </h4>
     <ul class="functions">
       <li class="item item-checkbox">
          <label class="checkbox">
@@ -32,6 +33,7 @@
          <p class="function-text"><strong class="highlight">Tracking</strong> how engaged your users are through analytics</p>
       </li>
     </ul>
+     <p class="function-text">* other changes could be made/added to your app</p>
   </br>
 </br>
     <div class="card">
