--- a/www/views/menu.html
+++ b/www/views/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content class="menu-content">
-    <ion-nav-bar class="bar-positive">
+    <ion-nav-bar class="bar-dark">
       <ion-nav-buttons side="left" >
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
