--- a/www/views/load-brand.html
+++ b/www/views/load-brand.html
@@ -3,10 +3,12 @@
 <div class="container">
   <div class="col col-10 window">
     <iframe class="frame" width="312" height="528" scrolling="yes" style="margin:10px;" ng-src="{{link}}"></iframe>
+      <p class="function-text"> Please wait a moment for the app to load before playing around.</p>
   </div>
   <div class="demo-text">
     <h1> Your App Demo </h1>
     <h4> An app can improve the way you engage your users </h4>
+
     <ul class="functions">
       <li class="item item-checkbox">
          <label class="checkbox">
