--- a/www/views/menu.html
+++ b/www/views/menu.html
@@ -19,7 +19,7 @@
           <ion-item class="menu-item" href="#/events"><i class="icon1 ion-calendar" ng-class="cat.icon"></i> Events</ion-item>
           <ion-item class="menu-item" href="#/videos"><i class="icon1 ion-videocamera" ng-class="cat.icon"> </i> Videos</ion-item>
           <ion-item class="menu-item"href="#/product"><i class="icon1 ion-bag" ng-class="cat.icon"></i> Shop</ion-item>
-          <ion-item class="menu-item" href="#"><i class="icon1 ion-pricetags" ng-class="cat.icon"> </i> Deals</ion-item>
+          <ion-item class="menu-item" href="#/deals"><i class="icon1 ion-pricetags" ng-class="cat.icon"> </i> Promotions</ion-item>
             <div class="item item-divider"> More Information</div>
           <ion-item class="menu-item" href="#/about"><i class="icon1 ion-information-circled" ng-class="cat.icon"></i> About us</ion-item>
       </ion-list>
