--- a/www/views/menu.html
+++ b/www/views/menu.html
@@ -1,9 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content class="menu-content">
     <ion-nav-bar class="bar-dark">
-      <ion-nav-buttons side="left" >
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
+      <ion-nav-buttons side="left">
+       <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
