--- a/www/views/product.html
+++ b/www/views/product.html
@@ -12,7 +12,7 @@
           <h6 class="color1">{{product.price}}</h6>
         </a>
 
-        <ion-item class="tabs tabs-secondary tabs-icon-left calm">
+        <ion-item class="tabs tabs-secondary tabs-icon-left dark">
           <a class="tab-item color" ng-click="view(deal)" ng-class="{favouriteClass:deal.claimed=='claimTrue'}" ng-click="!showSearch">
             <i class="icon2 ion-bag"></i> Claim
           </a>
