--- a/www/views/template.html
+++ b/www/views/template.html
@@ -8,7 +8,7 @@
           <iframe src="{{play}}"  width="300" height="400" style="border:1px solid black;"scrolling="yes" ></iframe>
       </div>
       <div class="modal-footer">
-        <button class="button button-calm close" ng-click="close('Yes')" class="btn btn-primary " data-dismiss="modal">
+        <button class="button button-dark close" ng-click="close('Yes')" class="btn btn-primary " data-dismiss="modal">
           Close
         </button>
       </div>
