--- a/www/views/deals.html
+++ b/www/views/deals.html
@@ -11,7 +11,7 @@
           <h5 class="color1">{{promo.descr}}</h5>
         </a>
 
-        <ion-item class="tabs tabs-secondary tabs-icon-left calm">
+        <ion-item class="tabs tabs-secondary tabs-icon-left dark">
           <a class="tab-item color" ng-click="view(deal)" ng-class="{favouriteClass:deal.claimed=='claimTrue'}" ng-click="!showSearch">
             <i class="icon2 ion-bag"></i> Claim
           </a>
