--- a/www/css/style.css
+++ b/www/css/style.css
@@ -140,6 +140,7 @@ display:block;
 }
 .color1{
   right:200px;
+  font-size: 15px;
 }
 .tab-item{
   text-align: left;
@@ -190,4 +191,10 @@ display:block;
 }
 .center{
   text-align:center !important;
+}
+.brands-background{
+  top:0;
+}
+.item-input-inset{
+  background-color: rgba(255, 0, 0, 0);
 }
