--- a/www/views/brands.html
+++ b/www/views/brands.html
@@ -1,14 +1,22 @@
 <ion-view title="{{title}}" >
-  <ion-content class="has-header">
-    <div collection-repeat="brand in brands">
+  <div class="bar item-input-inset">
+    <label class="item-input-wrapper">
+      <i class="icon ion-ios-search placeholder-icon"></i>
+      <input class="brands-background" type="search" ng-model="query" ng-click="search(query)" placeholder="Search">
+    </label>
+  </div>
+  <ion-content class="has-header" ng-init="init()">
+    <div collection-repeat="brand in brands|filter:brand.likes">
       <div class="list">
         <a class="item-thumbnail-left">
-          <h2 class="color1">{{brand.name}}</h2>
+          <h2 class="color1"><span class="highlight">#{{$index + 1}} </span>- {{brand.name}}</h2>
           <h5 class="color1">Id: {{brand.id}}</h5>
           <h6 class="color1">Likes: {{brand.likes}}</h6>
           <h6 class="color1">Website: {{brand.website}}</h6>
           <h6 class="color1">Emails: {{brand.emails}}</h6>
-          <h6 class="color1">Emails: {{brand.category}}</h6>
+          <h6 class="color1">Category: {{brand.category}}</h6>
+          <p><span class="highlight">http://fb-fan.herokuapp.com/#/demo/{{brand.id}}</span></p>
+          <hr>
         </a>
       </div>
     </div>
