--- a/www/views/brands.html
+++ b/www/views/brands.html
@@ -15,7 +15,7 @@
           <h6 class="color1">Website: {{brand.website}}</h6>
           <h6 class="color1">Emails: {{brand.emails}}</h6>
           <h6 class="color1">Category: {{brand.category}}</h6>
-          <p><span class="highlight">http://fb-fan.herokuapp.com/#/demo/{{brand.id}}</span></p>
+          <a ng-href="http://fb-fan.herokuapp.com/#/demo/{{brand.id}}"><p><span class="highlight">http://fb-fan.herokuapp.com/#/demo/{{brand.id}}</span></p></a>
           <hr>
         </a>
       </div>
