--- a/www/views/deals.html
+++ b/www/views/deals.html
@@ -7,8 +7,8 @@
       <div class="list">
         <a class="item-thumbnail-left">
           <img class="src" ng-src="{{promo.src}}">
-          <h5 class="color1">{{promo.title}}</h5>
-          <h5 class="color1">{{promo.descr}}</h5>
+          <h5 class="color-p">{{promo.title}}</h5>
+          <h5 class="color-p">{{promo.descr}}</h5>
         </a>
 
         <ion-item class="tabs tabs-secondary tabs-icon-left dark">
