--- a/www/views/product.html
+++ b/www/views/product.html
@@ -7,9 +7,9 @@
       <div class="list">
         <a class="item-thumbnail-left">
           <img class="src" ng-src="{{product.src}}">
-          <h5 class="color1">{{product.title}}</h5>
-          <h5 class="color1">{{product.descr}}</h5>
-          <h6 class="color1">{{product.price}}</h6>
+          <h5 class="color-p">{{product.title}}</h5>
+          <h5 class="color-p">{{product.descr}}</h5>
+          <h6 class="color-p">{{product.price}}</h6>
         </a>
 
         <ion-item class="tabs tabs-secondary tabs-icon-left dark">
