--- a/www/css/style.css
+++ b/www/css/style.css
@@ -145,7 +145,7 @@ display:block;
 .color-p{
   font-size: 10px;
   text-align:left;
-  right:300px;
+  left:300px;
 }
 .tab-item{
   text-align: left;
