--- a/www/views/load-brand.html
+++ b/www/views/load-brand.html
@@ -36,13 +36,13 @@
          <p class="function-text"><strong class="highlight">Tracking</strong> how engaged your users are through analytics</p>
       </li>
     </ul>
-     <p class="function-text"><small>* other changes could be made/added to your app</small></p>
+     <p class="function-text"><small>* This app is just a demo. Other changes could be made/added to your app</small></p>
   </br>
 </br>
     <div class="card">
   <div class="item item-text-wrap function-card">
-    <p>Find out more information at <span class="highlight">www.startyourapp.com</span> </p>
-    <p>or Contact us at <span class="highlight">contact@startyourapp.com</span></p>
+    <p>Find out more information at <span class="highlight">www.startyourapp.org</span> </p>
+    <p>or Contact us at <span class="highlight">contact@startyourapp.org</span></p>
   </div>
 </div>
   </div>
