--- a/www/views/load-brand.html
+++ b/www/views/load-brand.html
@@ -15,36 +15,42 @@
          <label class="checkbox">
            <input type="checkbox">
          </label>
-         <p class="function-text"><strong class="highlight">Communicating</strong> your brand, products and updates in a clean manner</p>
+         <p class="function-text"><strong class="highlight">Communicate</strong> your brand, products and updates in a clean manner</p>
       </li>
       <li class="item item-checkbox">
          <label class="checkbox">
            <input type="checkbox">
          </label>
-         <p class="function-text"><strong class="highlight">Engaging</strong> users directly through push notifications</p>
+         <p class="function-text"><strong class="highlight">Engage</strong> users directly through push notifications</p>
       </li>
       <li class="item item-checkbox">
          <label class="checkbox">
            <input type="checkbox">
          </label>
-         <p class="function-text"><strong class="highlight">Integrating</strong> your Facebook existing updates with your app</p>
+         <p class="function-text"><strong class="highlight">Integrate</strong> your Facebook existing updates with your app</p>
       </li>
       <li class="item item-checkbox">
          <label class="checkbox">
            <input type="checkbox">
          </label>
-         <p class="function-text"><strong class="highlight">Tracking</strong> how engaged your users are through analytics</p>
+         <p class="function-text"><strong class="highlight">Track</strong> how engaged your users are through analytics</p>
       </li>
     </ul>
      <p class="function-text"><small>* This app is just a demo. Other changes could be made/added to your app</small></p>
-  </br>
-</br>
+   </br>
+     <button class="button button-positive sign-up" ng-click='signup()'>
+       Find out more information
+     </button>
+   </br>
+   </br>
+   </br>
     <div class="card">
   <div class="item item-text-wrap function-card">
-    <p>Find out more information at <span class="highlight">www.startyourapp.org</span> </p>
-    <p>or Contact us at <span class="highlight">contact@startyourapp.org</span></p>
+    <p class="fact"> <i class="ion-information-circled positive"> </i> Facebook engages users only <strong>less than 3%</strong> of the time organically</p>
+    <p class="fact"> Apps can engage customers <strong>5-7 times</strong> more with push notifications and mobile updates</p>
   </div>
 </div>
+
   </div>
 </div>
 </ion-view>
