--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,10 +1,11 @@
 
 
 body{
+  font-family: 'Cabin', sans-serif;
   overflow-y: none;
   text-align: center;
   padding:0;
-
+  background-color:rgba(0, 0, 0, 0);
 
 }
 a:-webkit-any-link{
@@ -27,69 +28,148 @@ text-decoration:none !important;
   padding-left: 25px;
   float:left;
 }
-.text{
-  height:100%;
-}
 
 .test{
   overflow-x: scroll;
   width:100%;
 }
-.album{
-  width:100%;
+
+.album-p{
+  width:400px;
+  height:200px;
 }
+
 .icon1{
   color:#444;
   font-size: 20px;
   padding-right: 10px;
+  background: none !important;
 }
 .icon2{
   color:#444;
-  font-size:20px;
+  font-size:12px;
   padding-right: 10px;
   text-align: left;
 }
-.event-card{
-  min-height:150px;
-  text-decoration: none;
+.photo-card .card {
+  border:0;
+  margin:0;
+  padding:0;
 }
+.photo-card .card .post{
+  float:left;
+  padding:10px;
+}
+.photo-card .text p {
+  font-size:12px;
+  line-height: 12px;
+  padding: 5px;
+
+}
+.photo-card .text div {
+  font-size:12px;
+}
+
 .post-card{
   padding: 0;
   text-decoration: none;
   height:120px;
   border-bottom:1px solid #444;
 }
-.menu-item{
-  text-align: left;
-  padding-left: 30px;
+
+
+
+.test3 .my-bar .title{
+  color:white !important;
+  border:0;
+}
+.test3 .menu-content{
+  background-color:rgba(255,255,255,0.05) !important;
+  border:0;
 }
 
-.post-item{
+.test3{
+  background-image: url("http://i48.tinypic.com/14e8hdv.jpg");
+  -webkit-filter: grayscale(50%);
+}
+.test3 .menu-content .menu-list{
+  position: fixed;
+  top:80px;
+  left:30px;
   text-align: left;
 }
-.post{
-padding-top: 10px;
+
+
+.test3 .menu-content .menu-list ion-item{
+  background:none !important;
+  border:0;
+}
+.menu-content .menu-list .menu-item{
+  font-family: 'Cabin', sans-serif;
+  background:none !important;
+  text-align:left;
+  border:0;
+  font-size: 15px;
+  font-weight: 100;
+  color:black;
+}
+
+.menu-content .menu-list .menu-item .icon1{
+  color:black;
+
+}
+ion-item{
+  background: none !important;
+
+
+}
+ion-header-bar .my-bar{
+  height:900px;
+
+}
+
+
+
+.menu-content .menu-list .item-divider{
+  background-color: rgba(255,255,255,0.1)!important;
+  color: black;
+  margin:0;
+  padding: 0;
+  text-align: left;
+  border:
+
+}
+
+.post-picture{
+  float:left;
+  height:100px;
+  width:100px;
+}
+.card .post-item{
+  padding:4px;
+  margin:0;
+}
+.card .post-item .col-7{
+  padding-left:15px;
+  margin:0;
+}
+.post-item{
+  text-align: left;
+  padding:8px;
+
+}
+.menu-content .menu-list .post{
 font-size:11px;
 text-align:left;
-padding-left:30px;
+padding-left:100px;
 text-decoration: none;
+
 }
 .border{
   border-bottom: 1px solid black;
 }
 
-.post-picture{
-  float:left;
-  padding-right:5px;
-  height:120px;
-  width:150px;
-}
-.video-picture{
-  float:left;
-  padding-right:5px;
-  height:120px;
-  width:120px;
-}
+
 
 .event-cover{
   width:100%;
@@ -99,35 +179,64 @@ text-decoration: none;
   text-decoration: none;
   text-transform: none;
   text-align: left;
-  padding-left: 20px;
+  font-family: 'Cabin', sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+  padding-left: 50px;
 }
-.event-card{
+.event-title{
   text-decoration: none;
   text-transform: none;
+  text-align: left;
+  font-family: 'Cabin', sans-serif !important;
+  font-weight: 700 !important;
+  font-size: 13px !important;
+  padding-left: 50px;
+  padding-top: 5px;
+
+}
+.event-card .card .small{
+  float:left;
+  padding-left: 10px;
 }
 .event-icon{
-  /**float:right;*/
+  color:#444;
+  font-size:13px !important;
+  padding-right:8px;
+  position: fixed;
+  left:280px;
+  bottom:35px;
+}
+
+.event-date{
+  font-family: 'Montserrat', sans-serif;
+  font-size:15px !important;
+  font-weight:400 !important;
+  background-color: rgba(0,0,0,0.7);
+  color:white;
+  width:40px;
+  height:100%;
+  float:left;
+    margin:0;
+  padding:2px;
+}
+.event-card .card{
+  text-decoration: none;
+  text-transform: none;
+  padding:2px 4px;
+  margin: 0;
+  back
+}
+.event-icon{
   font-size: 15px;
 }
 
 .text .photo-p{
   text-align: left;
   font-size:12px;
-  width: 100%;
-  font-weight:300;
-}
-.album-p{
-  width:300px;
-  height:200px;
+  font-weight: 200;
 }
 
-.text .photo-card{
-padding:0;
-min-height:500px;
-position:absolute;
-display:block;
-
-}
 
 .about-p{
   width:100%;
@@ -155,9 +264,55 @@ display:block;
   text-align: left;
   padding-left:20px;
 }
-.video-p{
+
+.video-picture{
+  float:left;
+  height:100px;
   width:100px;
+
 }
+.video-icon{
+
+}
+.video-duration{
+  padding:1px 35px;
+  margin:0;
+  position: fixed !important;
+  background-color: rgba(0, 0, 0, 0.4);;
+  font-size: 9px !important;
+  font-weight: 700;
+  color:white !important;
+  left:16px;
+  top:85px;
+}
+
+.video-item .menu-list{
+  border-bottom: 1px solid black;
+}
+.video-item .menu-list .item-icon-left{
+  margin:0;
+  border:0;
+  padding:2px 5px;
+  text-align: left;
+
+}
+
+
+.video-title{
+  padding-left: 20px;
+  padding-top: 35px;
+  font-size: 13px !important;
+}
+.video-icon{
+  position: fixed;
+  left:300px;
+  bottom:35px;
+}
+.video-item .small{
+  padding-left: 20px;
+}
+
+
 .brandslist{
   text-align: left;
   padding-left:20px;
@@ -172,6 +327,9 @@ display:block;
   font-weight: 300;
   padding: 3px 5px;
 }
+.container{
+  overflow-y: scroll;
+}
 .container p{
   color:grey !important;
 }
@@ -185,8 +343,10 @@ display:block;
 .checkbox{
   font-size: 10px;
 }
+
 .function-card{
   font-size: 12px;
+
 }
 .spinner svg {
   width: 64px;
@@ -205,4 +365,91 @@ display:block;
 }
 .list{
    -webkit-user-select: auto;
+   border: 0;
+
+}
+
+.post-title{
+  font-family: 'Cabin', sans-serif;
+  font-weight:500;
+  font-size: 13px;
+  left: 30px;
+}
+.date-post{
+  text-align: left;
+}
+.menu-content .mynavbar{
+  background-color:#29223B !important;
+
+}
+.menu-content .mynavbar .ion-navicon{
+  position: fixed;
+
+}
+
+.test3 .my-bar{
+  height:110px !important;
+  background: rgba(0,0,0,0.3) !important;
+  border-bottom: 1px solid #444 !important;
+}
+
+
+.test3 .my-bar .bdg{
+  position: fixed;
+  left:110px;
+  top:20px;
+  width: 50px;
+  height:50px;
+  border-radius: 50%;
+}
+.test3 .my-bar .title{
+  position: fixed;
+  top:70px;
+  margin:0;
+  padding:0;
+  font-weight: 200;
+}
+.fact{
+  font-size: 12px;
+}
+.container .sign-up{
+  padding:1px 200px;
+}
+.modal{
+  border: 2px solid black;
+
+
+}
+
+.positive{
+width:100%;
+left:0;
+right:0;
+}
+
+
+.fade{
+  position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+    background-color: rgba(0,0,0,0.89);
+}
+.list{
+  float: left;
+  text-align: left;
+  background-color:white !important;
+  width: 100%;
+}
+
+.modal .modal-content{
+  position: fixed;
+  top:10%;
+  width: 100%;
+  height:50%;
+  background-color:white !important;
+  padding: 0;
+
 }
