--- a/www/views/albums.html
+++ b/www/views/albums.html
@@ -3,15 +3,15 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon" ng-click="toggleSearch()"></button>
   </ion-nav-buttons>
   <ion-content class="has-header" ng-init="init()">
-    <div collection-repeat="photo in photos|orderBy:'-photo.created_time'" >
-      <div class="card photo-card">
-        <div class="item item-text-wrap">
+    <div collection-repeat="photo in photos|orderBy:'-photo.created_time'" class="item item-text-wrap photo-card" >
+      <div class="card">
           <img class="col col-12 album-p" ng-src="{{photo.source}}">
           <div class="col col-12 text">
-          <p class="col col-12 photo-p"><i class="icon2 ion-location"></i>{{item.description.length > 50 ? '...' : ''}} <strong>{{photo.place.name}}<strong></p>
-          <p class="col col-12 photo-p"><i class="icon2 ion-chatbox"></i> {{photo.name}}</p>
+          <p class="col col-12 photo-p"><strong>{{photo.name|limitTo:100}}{{photo.name > 100 ? '...' : ''}}</strong></p>
+          <p class="col col-12 photo-p">{{photo.place.name}}</p>
+
+          <p class="post small"><small class="highlight"><em><i class="icon2 ion-thumbsup"></i> {{photo.likes.summary.total_count}}</small>&nbsp;&nbsp;</em><i class="icon2 ion-chatbox"></i> <small class="highlight"><em>{{photo.comments.summary.total_count}}</small></em></p>
           </div>
-        </div>
       </div>
     </div>
   </ion-content>
