--- a/www/views/events.html
+++ b/www/views/events.html
@@ -3,13 +3,15 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon" ng-click="toggleSearch()"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <div collection-repeat="event in events | orderBy:'-event.start_time'">
-      <div class="card event-card" href={{event.ticket_uri}}>
+    <div collection-repeat="event in events | orderBy:'start_time'" class="item item-text-wrap event-card">
+      <div class="card" href={{event.ticket_uri}}>
         <a ng-click='show(event.ticket_uri)'>
           <img class="event-cover" ng-src="{{event.cover.source}}">
-          <h6 class="event"><strong>{{event.name }}<strong></h6>
+          <h6 class="event-date"><small>{{event.start_time | date:dateFormat }}</small></h6>
+          <h6 class="event-title"><strong>{{event.name}}<strong></h6>
           <h6 class="event">{{event.location}}</h6>
-          <h6 class="event"><small>{{event.start_time | limitTo:10 }}</small></h6>
+          <h6 class="event-icon"><i class="ion-chevron-right"></i></h6>
+          <h6 class="small highlight"><small>rsvp now</small></h6>
         </a>
       </div>
     </div>
