--- a/www/views/load-brand.html
+++ b/www/views/load-brand.html
@@ -7,8 +7,8 @@
 
   </div>
   <div class="demo-text">
-    <h1> Your App Demo </h1>
-    <h4> An app can improve the way you engage your users </h4>
+    <h1>Your {{about.name}} App</h1>
+    <h4> An app can improve the way {{about.name}} engage your users </h4>
     <hr>
     <ul class="functions">
       <li class="item item-checkbox">
@@ -38,7 +38,7 @@
     </ul>
      <p class="function-text"><small>* This app is just a demo. Other changes could be made/added to your app</small></p>
    </br>
-     <button class="button button-positive sign-up" ng-click='signup()'>
+     <button class="button button-royal sign-up" ng-click='signup()'>
        Find out more information
      </button>
    </br>
@@ -46,7 +46,7 @@
    </br>
     <div class="card">
   <div class="item item-text-wrap function-card">
-    <p class="fact"> <i class="ion-information-circled positive"> </i> Facebook engages users only <strong>less than 3%</strong> of the time organically</p>
+    <p class="fact"> <i class="ion-information-circled royal"> </i> Facebook engages users only <strong>less than 3%</strong> of the time organically</p>
     <p class="fact"> Apps can engage customers <strong>5-7 times</strong> more with push notifications and mobile updates</p>
   </div>
 </div>
