--- a/www/views/menu.html
+++ b/www/views/menu.html
@@ -10,9 +10,9 @@
   </ion-side-menu-content>
   <ion-side-menu side="left" class="test3">
     <ion-header-bar class="bar-light my-bar">
-      <img class="bdg" src="https://www.facebookbrand.com/img/fb-art.jpg"></img>
+      <img class="bdg" ng-src='{{about.picture.data.url}}'></img>
     </br>
-      <h1 class="title">Your App</h1>
+      <h1 class="title">{{about.name}}</h1>
     </ion-header-bar>
     <ion-content class="menu-content">
       <ion-list class="menu-list">
