--- a/www/views/signup.html
+++ b/www/views/signup.html
@@ -25,7 +25,7 @@
               <input type="tel" name="tel" ng-model="user.tel" minlength="8">
             </label>
           </div>
-          <button class=" button button-positive positive" ng-click="send(user.name,user.email,user.message,user.tel)" class="btn btn-primary " data-dismiss="modal">
+          <button class=" button button-royal royal" ng-click="send(user.name,user.email,user.message,user.tel)" class="btn btn-primary " data-dismiss="modal">
             Submit
           </button>
           <button class="button button-dark close" ng-click="close('Yes')" class="btn btn-primary " data-dismiss="modal">
