--- a/www/views/load-brand.html
+++ b/www/views/load-brand.html
@@ -43,7 +43,7 @@
      </button>
    </br>
  </br>
-    <div class="card">
+    <div class="card load-card">
   <div class="item item-text-wrap function-card">
     <p class="fact"> <i class="ion-information-circled royal"> </i> Facebook engages users only <strong>less than 3%</strong> of the time organically</p>
     <p class="fact"> Apps can engage customers <strong>5-7 times</strong> more with push notifications and mobile updates</p>
