--- a/www/css/style.css
+++ b/www/css/style.css
@@ -455,6 +455,15 @@ right:0;
   padding: 0;
 
 }
+.modal .modal-contente{
+  position: fixed;
+  top:0 !important;
+  width: 100%;
+  height:50%;
+  background-color:white !important;
+  padding: 0;
+
+}
 .functions{
   border: 0;
 }
