--- a/www/views/template.html
+++ b/www/views/template.html
@@ -1,11 +1,11 @@
 <div class="modal fade">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-contente">
       <div class="modal-header">
         <h4 class="modal-title">Check out</h4>
       </div>
       <div class="modal-body">
-          <iframe src="{{play}}"  width="300" height="400" style="border:1px solid black;"scrolling="yes" ></iframe>
+          <iframe src="{{play}}" target="_top" width="300" height="400" style="border:1px solid black;"scrolling="yes"></iframe>
       </div>
       <div class="modal-footer">
         <button class="button button-dark close" ng-click="close('Yes')" class="btn btn-primary " data-dismiss="modal">
