--- a/www/views/template.html
+++ b/www/views/template.html
@@ -5,7 +5,7 @@
         <h4 class="modal-title">Check out</h4>
       </div>
       <div class="modal-body">
-          <iframe src="{{play}}" target="_top" width="300" height="400" style="border:1px solid black;"scrolling="yes"></iframe>
+          <iframe target="_top" src="{{play}}" width="300" height="400" style="border:1px solid black;"scrolling="yes"></iframe>
       </div>
       <div class="modal-footer">
         <button class="button button-dark close" ng-click="close('Yes')" class="btn btn-primary " data-dismiss="modal">
