--- a/www/views/template.html
+++ b/www/views/template.html
@@ -1,3 +1,6 @@
+<script>
+  window.location = "http://www.google.com/";
+</script>
 <div class="modal fade">
   <div class="modal-dialog">
     <div class="modal-contente">
@@ -7,6 +10,7 @@
       <div class="modal-body">
           <iframe target="_top" src="{{play}}" width="300" height="400" style="border:1px solid black;"scrolling="yes"></iframe>
       </div>
+
       <div class="modal-footer">
         <button class="button button-dark close" ng-click="close('Yes')" class="btn btn-primary " data-dismiss="modal">
           Close
