--- a/www/views/events.html
+++ b/www/views/events.html
@@ -5,7 +5,7 @@
   <ion-content class="has-header">
     <div collection-repeat="event in events | orderBy:'start_time'" class="item item-text-wrap event-card">
       <div class="card" href={{event.ticket_uri}}>
-        <a ng-click='show(event.ticket_uri)'>
+        <a ng-href='{{event.ticket_uri}}' target="_blank">
           <img class="event-cover" ng-src="{{event.cover.source}}">
           <h6 class="event-date"><small>{{event.start_time | date:dateFormat }}</small></h6>
           <h6 class="event-title"><strong>{{event.name}}<strong></h6>
