--- a/www/views/list.html
+++ b/www/views/list.html
@@ -20,7 +20,7 @@
       <div class="card menu-list">
         <div class="post-item item-text-wrap">
         <div class="col col-3">
-        <a class="border" ng-click='show(item.link)'>
+        <a class="border" ng-href='{{item.link}}' target="_blank">
           <img class="post-picture" ng-src="{{item.picture}}">
         <div class="col col-7">
           <h4 class="post post-title"><strong>{{item.message| limitTo:50}}{{item.message.length > 50 ? '...' : ''}}</strong></h4>
