--- a/www/views/brands.html
+++ b/www/views/brands.html
@@ -15,13 +15,13 @@
       <div class="list brands-list">
         <a class="item-thumbnail-left">
           <h2 class="color1"><strong><span class="highlight">#{{$index + 1}} </span>- {{brand.name}}</strong></h2>
-          <h5 class="color1">Id: {{brand.id}}</h5>
+          <h5 class="color1" ng-class="{'fbContacted': contacted.indexOf(brand.id) > -1}" >Id: {{brand.id}}</h5>
           <h6 class="color1">Likes: {{brand.likes}}</h6>
           <h6 class="color1">Website: {{brand.website}}</h6>
           <h6 class="color1">Emails: {{brand.emails}}</h6>
           <h6 class="color1">Category: {{brand.category}}</h6>
           <a class="color1 highlight" ng-href="http://fb-fan.herokuapp.com/#/demo/{{brand.id}}"><p>http://fb-fan.herokuapp.com/#/demo/{{brand.id}}</p></a>
-          <button class="button button-positive send" ng-click="send(brand)">{{brand.emails[0]}}</button>
+          <button class="button button-positive send"  ng-click="send(brand)">{{brand.emails[0]}}</button>
           <hr>
         </a>
 
