--- a/www/views/brands.html
+++ b/www/views/brands.html
@@ -20,7 +20,7 @@
           <h6 class="color1">Website: {{brand.website}}</h6>
           <h6 class="color1">Emails: {{brand.emails}}</h6>
           <h6 class="color1">Category: {{brand.category}}</h6>
-          <a class="color1 highlight" ng-href="http://fb-fan.herokuapp.com/#/demo/{{brand.id}}"><p>http://fb-fan.herokuapp.com/#/demo/{{brand.id}}</p></a>
+          <a class="color1 highlight" ng-href="http://www.startyourapp.org/#/demo/{{brand.id}}" target="_blank"><p>http://fb-fan.herokuapp.com/#/demo/{{brand.id}}</p></a>
           <button class="button button-positive send"  ng-click="send(brand)">{{brand.emails[0]}}</button>
           <hr>
         </a>
