--- a/www/css/style.css
+++ b/www/css/style.css
@@ -412,8 +412,9 @@ text-decoration: none;
 .fact{
   font-size: 12px;
 }
-.container .sign-up{
+.container .sign-up-button{
   padding:1px 200px;
+
 }
 .modal{
   border: 2px solid black;
