--- a/www/views/load-brand.html
+++ b/www/views/load-brand.html
@@ -37,7 +37,7 @@
     </ul>
      <p class="function-text"><small>* This app is just a demo. Other changes could be made/added to your app</small></p>
    </br>
-     <button class="button button-royal sign-up" ng-click='signup()'>
+     <button class="button button-royal sign-up-button" ng-click='signup()'>
        Find out more information
      </button>
    </br>
